# stellerator

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.beads/: .beads-credential-key  issues.jsonl  metadata.json
scripts/: run_real_test_data.sh
src/: annotation.rs  cli.rs  fasta.rs  loci.rs  logging.rs  main.rs  pipeline.rs  vcf.rs
tests/: fusion_fixture.rs
