[package]
name = "Stellerator"
version = "0.1.1"
edition = "2024"
description = "Extract candidate fusion-supporting reads for target genes from indexed BAM files"

license = "MIT"
readme = "README.md"
keywords = ["genomics", "bioinformatics", "bam"]
categories = ["science", "command-line-utilities"]
include = [
"Cargo.toml",
"Cargo.lock",
"LICENSE*",
"README*",
"src/",
"images/",
]

[[bin]]
name = "stellerator"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
flate2 = "1.1.5"
noodles-bam = "0.86.0"
noodles-core = "0.19.0"
noodles-sam = "0.82.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.23"
